# deep_sculpt

./: .env.docker  .gitignore  CLAUDE.md  CLEAN_STRUCTURE_SUMMARY.md  COLAB_TRAINING_COMMANDS.md  MAIN_MIGRATION_SUMMARY.md  Makefile  PYTORCH_TRAINER_IMPLEMENTATION_SUMMARY.md  README.md  RESTRUCTURE_SUMMARY.md  colab_setup.py  debug_colab.py  docker-compose.yml  pyproject.toml  requirements-colab.txt  requirements.txt
autoresearch/: Dockerfile  README.md  entrypoint.sh  program.md
boilerplate/deepsculpt_legacy/: Makefile  pyproject.toml
boilerplate/deepsculpt_legacy/deepSculpt/: visualization.py
boilerplate/deepsculpt_legacy/summaries/: PYTORCH_CURATOR_SUMMARY.md  PYTORCH_MODELS_IMPLEMENTATION_SUMMARY.md  PYTORCH_UTILS_SUMMARY.md  PYTORCH_VISUALIZATION_SUMMARY.md  PYTORCH_WORKFLOW_MIGRATION_SUMMARY.md
data/2025-12-11/metadata/: collection_metadata.json
data/2025-12-11/pytorch_samples/colors/: colors_000000.pt  colors_000001.pt  colors_000002.pt
data/2025-12-11/pytorch_samples/structures/: structure_000000.pt  structure_000001.pt  structure_000002.pt
deepSculpt/: main.py  pytorch_curator.py  pytorch_diffusion.py  pytorch_models.py  pytorch_shapes.py  pytorch_workflow.py
deepsculpt/: Makefile  README.md  __init__.py  colab_setup.py  config.yaml  config_colab.yaml  debug_tensor.py  main.py  test_factory.py  test_trainer.py
deepsculpt/core/: __init__.py
deepsculpt/core/data/generation/: dataset_streamer.py  pytorch_collector.py  pytorch_sculptor.py  pytorch_shapes.py
deepsculpt/core/data/transforms/: augmentations.py  encoding.py  logger.py
deepsculpt/core/models/: __init__.py  base_models.py  model_factory.py  pytorch_models.py
deepsculpt/core/models/diffusion/: pipeline.py  unet.py
deepsculpt/core/models/gan/: __init__.py  discriminator.py  generator.py
deepsculpt/core/training/: __init__.py  base_trainer.py  diffusion_trainer.py  gan_trainer.py  pytorch_trainer.py  training_loops.py  training_metrics.py
deepsculpt/core/utils/: __init__.py  monitoring.py
deepsculpt/core/visualization/: __init__.py  pytorch_visualization.py
deepsculpt/core/workflow/: __init__.py  pytorch_workflow.py
deepsculpt/examples/: complete_pipeline_example.py
deepsculpt/notebooks/: DeepSculpt_Diffusion_Color.ipynb  DeepSculpt_GAN_Color.ipynb  DeepSculpt_GAN_Monochrome.ipynb  DeepSculpt_Training_Working.ipynb
deepsculpt/notebooks/notebook_output/generated_samples/: sample_001.pt
deepsculpt/scripts/: create_all_notebooks.py
deepsculpt/tests/integration/: test_main_integration.py  test_performance_comparison.py
deepsculpt/tests/unit/: test_all_pytorch_shapes.py  test_pytorch_collector.py  test_pytorch_curator_integration.py  test_pytorch_pipe_generation.py
deepsculpt_legacy/: README.md  main.py
deepsculpt_legacy/deepSculpt/: main.py  workflow.py
deepsculpt_legacy/summaries/: PYTORCH_MIGRATION_SUMMARY.md
deepsculpt_legacy/tests/: test_visualization_integration.py
deepsculpt_v2/: README.md  colab_setup.py  config.yaml  main.py  pipeline.py  pyproject.toml  test_sculptor.py
deepsculpt_v2/core/data/: __init__.py
deepsculpt_v2/core/data/generation/: __init__.py  data_generator.py  pytorch_collector_bis.py  pytorch_sculptor.py
deepsculpt_v2/core/data/loaders/: __init__.py  data_loaders.py
deepsculpt_v2/core/data/sparse/: sparse_layers.py
deepsculpt_v2/core/models/: __init__.py  base_models.py  pytorch_models.py
deepsculpt_v2/core/training/: __init__.py  base_trainer.py  gan_trainer.py  optimizers.py  pytorch_trainer.py  schedulers.py
deepsculpt_v2/core/utils/: __init__.py  logger.py  performance_optimizer.py  pytorch_utils.py
deepsculpt_v2/core/workflow/: __init__.py  pytorch_mlflow_tracking.py
deepsculpt_v2/notebooks/: DeepSculpt_Colab.ipynb  DeepSculpt_Diffusion_Color.ipynb  DeepSculpt_Diffusion_Monochrome.ipynb  DeepSculpt_GAN_Color.ipynb  DeepSculpt_GAN_Monochrome.ipynb  DeepSculpt_Training_Working.ipynb  DeepSculpt_v2_Colab_Complete.ipynb  DeepSculpt_v2_Colab_QuickStart.ipynb  README.md
deepsculpt_v2/scripts/: create_all_notebooks.py  create_colab_notebook.py  train_local.py
deepsculpt_v2/tests/integration/: test_end_to_end_pipeline.py  test_system_level.py
deepsculpt_v2/tests/unit/: test_pipeline.py  test_pytorch_curator.py  test_pytorch_models.py  test_pytorch_utils.py  test_unet_simple.py
docs/: COLAB_SETUP.md  COMPLETION_SUMMARY.md  DEEPSCULPT_V2_RESTRUCTURE_SUMMARY.md  MISSING_FUNCTIONS_ANALYSIS.md  QUICK_START_GUIDE.md  architecture.md  inference.md  operations.md  training.md
docs/summaries/: PIPELINE_README.md
notebooks/: DeepSculpt_Colab.ipynb  DeepSculpt_Diffusion_Monochrome.ipynb  DeepSculpt_GAN_Monochrome.ipynb  DeepSculpt_v2_Colab_Complete.ipynb  DeepSculpt_v2_Colab_QuickStart.ipynb
notebooks/notebook_output/models/: config.json
scripts/: autoresearch_report.py  colab_train.py  colab_train_diffusion.py  create_colab_notebook.py  preview_sample.py  restructure_project.py  restructure_project.sh
services/inference/: Dockerfile  requirements.txt
services/inference/app/: diffusion_sampler.py  gcp_run_job.py  main.py  model_loader.py  schemas.py  settings.py  visualization.py
services/mlflow/: Dockerfile  requirements.txt
services/trainer/: Dockerfile  gcs_model_pointer.py  mlflow_utils.py  requirements.txt  train_entrypoint.py
summaries/: FUTURE_ROADMAP.md
test_data/: dataset_metadata.json
test_data_final/: dataset_metadata.json
test_data_fixed/: dataset_metadata.json
test_sparse/: dataset_metadata.json
tests/: test_discriminator.py  test_final_pytorch_shapes.py  test_pytorch_diffusion_pipeline.py  test_pytorch_diffusion_unet.py  test_pytorch_edge_generation.py  test_pytorch_grid_generation.py  test_pytorch_plane_generation.py  test_pytorch_sculptor.py  test_pytorch_trainer.py  test_pytorch_visualization.py  test_pytorch_workflow.py  test_simple_grid.py  test_sparse_tensor_implementation.py
tests/integration/: test_main_unified.py
tests/unit/: test_architectural_generation.py  test_colab_train.py  test_colab_train_diffusion.py  test_pytorch_models_integration.py  test_pytorch_workflow_simple.py
(+31 files in other folders)
